css/main.css
/*-----------------------------------*\
  General
\*-----------------------------------*/
html {
  background: white;
  color: #222222;
  font-size: 22px;
  font-weight: 300;
  padding: 2.5em 3em 1em;
  -webkit-font-smoothing: antialiased;
  text-rendering: optimizeLegibility;
}

body {
  font-family: "aktiv-grotesk",sans-serif;
  line-height: 1.5;
}

#wrap {
  width: auto;
  max-width: 65rem;
  margin: 0 auto;
}

::selection {color:#1e78d3; background:#ffffff;}
::-moz-selection {color:#1e78d3; background:#ffffff;}

/*-----------------------------------*\
  Navigation
\*-----------------------------------*/

nav {
    padding-bottom: 2.5em;
}

nav a {
    font-family: "aktiv-grotesk",sans-serif;
    font-weight: bold;
    text-decoration: none;
}

nav ul {
    margin-top: 0em;
    text-align: right;
    list-style-type: none;
    padding: 0;
}

nav li {
    display: inline;
    line-height: 25px;
    font-size: 1.05em;
}

nav li:first-child {
  margin-right: 1.2rem;
}

nav li:last-child {
  margin-left: 1.2rem;
}

/*-----------------------------------*\
  Typography
\*-----------------------------------*/

h1,h2,h3,h4,h5,h6 {font-family: "aktiv-grotesk",sans-serif;}

h1 { font-size: 2em; font-weight: bold;       /* 2*16 = 32 */         }
h2 { font-size: 1.5em; font-weight: bold;     /* 1.5*16 = 24 */       }
h3 { font-size: 1.25em; font-weight: bold;    /* 1.25*16 = 20 */      }
h4 { font-size: 1em; font-weight: bold;       /* 1*16 = 16 */         }
h5 { font-size: 0.83em; font-weight: bold;    /* 0.83*16 = 13.28 */   }
h6 { font-size: 0.75em; font-weight: bold;    /* 0.75*16 = 12 */      }

h1.lead {
  font-weight: bold;
  font-size: 46px;
  line-height: 66px;
  color: #222;
  padding-bottom: 1.5em;
}

h2.post-title {
  text-align: center;
  margin-top: 0;
}

h3.logo {
  font-family: "aktiv-grotesk",sans-serif;
  margin: 0;
}

.logo span {
  color: #1e78d3;
  padding: 0px 7px;
}

.logo a {color: #454545; border-bottom: none;}
.logo a:hover {color: #454545; border-bottom: none;}

h4.post-title {
  margin-bottom: 0;
}

p {
  color: #454545;
}

p.break {
  text-align: center;
}

p.meta {
  color: #bdbdbd;
  font-size: .75em;
  text-align: center;
  margin-top: 0;
  margin-bottom: 2em;
}

p.date {
  color: #bdbdbd;
  font-size: .75em;
  margin-bottom: 0;
  margin-top: 0;
}

/*-----------------------------------*\
  Links
\*-----------------------------------*/

a {
  color: #1e78d3;
  text-decoration: none;
}

a:hover {
  color: #1e78d3;
  text-decoration: none;
  border-bottom: 1px solid #1e78d3;
}

a:active {
  padding-bottom: 1px;
  border-bottom: 1px solid #1e78d3;
}

/*-----------------------------------*\
  Images
\*-----------------------------------*/

img {max-width: 100%;}

img.portrait {
  max-width: 380px;
  margin: 0 auto;
  float: right;
  display: block;
}

figure {
  width: 100%;
  margin: 0;
}

figcaption {font-size: 0.8em; color: #282828; opacity: 0.9;}

/*-----------------------------------*\
  Lists
\*-----------------------------------*/

ul {
  list-style: none;
  padding: 0;
}

.articles ul {
  list-style:  none;
  padding-left: 0px;
}

.articles ul li {
  margin: 10px 0px 10px 0px;
}

ul.services {
  list-style: circle;
}

/*-----------------------------------*\
  Footer
\*-----------------------------------*/

footer {
  text-align: center;
  width: 100%;
  left: 0;
  border-top: 1px solid #eee;
  margin-top: 50px;
}

footer.container {
  margin: 0 auto;
  display: block;
}
footer .right {border-left: 1px solid #eee;}

footer ul {padding: 0;}
footer li {
  list-style: none;
  margin: 0;
}

footer li a {font-size: 0.9em;}
footer p {font-size: 0.7em; padding-top: 20px;}

/*-----------------------------------*\
  Mobile
\*-----------------------------------*/

@media screen and (max-width: 400px) {
  html {
    padding: 1.5em 0.95em 1.5em;
  }

  nav {
    padding-bottom: 0em;
  }

  nav ul {
    text-align: left;
    padding-top: 1em;
  }

  nav ul li {
    font-size: 0.9em;
  }

  h1.lead {
    font-weight: bold;
    font-size: 34px;
    line-height: 52px;
    color: #222;
    padding-bottom: 1em;
    margin-top: 0;
  }

  img.portrait {
    max-width: 320px;
    margin: 0;
    float: none;
  }

  h1 {
    font-size: 1.2em;
  }

  p {
    font-size: 0.9em;
  }

  h1 + p {
    margin-top: 1em;
  }
}

